--- a/Demo/basicDemo/aResume/style_1.css
+++ b/Demo/basicDemo/aResume/style_1.css
@@ -1,10 +1,14 @@
-h4,section:nth-of-type(1) p,section:nth-of-type(2) p{
+body{
+    padding: 0;
     margin: 0;
+    min-width: 800px;
+}
+h4,section:nth-of-type(1) p,section:nth-of-type(2) p{
     display: inline-block;
 }
 h4{
-    margin-right: 10px;
+    margin: 3px 10px 0 0;
 }
 p{
-    margin-right: 30px;
+    margin: 3px 30px 0 0;
 }
