--- a/Demo/basicDemo/aResume/css/style_3.css
+++ b/Demo/basicDemo/aResume/css/style_3.css
@@ -3,11 +3,11 @@ body,h1{
     margin: 0;
     min-width: 800px;
 }
-section:nth-of-type(1) h4,section:nth-of-type(2) h4,section:nth-of-type(1) p,section:nth-of-type(2) p{
+section:nth-of-type(1) h4,section:nth-of-type(2) h4{
     display: inline-block;
 }
 h4{
-    margin: 3px 10px 0 0;
+    margin: 0 10px 0 0;
 }
 p{
     display: inline-block;
@@ -22,7 +22,7 @@ header{
 }
 h2{
     min-width: 84px;
-    width: 10%;
+    width: 20%;
     font-size: 21px;
     height: 96px;
     margin: 0 10px 0 0;
@@ -33,7 +33,7 @@ h2{
     border-bottom: 2px solid #ffffff;
 }
 section{
-    height: 100px;
+    height: 96px;
     border-bottom: 2px solid lightgoldenrodyellow;
 }
 section:after{
