--- a/Demo/basicDemo/HelloWorld/CSS/helloWorld.css
+++ b/Demo/basicDemo/HelloWorld/CSS/helloWorld.css
@@ -205,17 +205,17 @@ div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockqu
             margin: 0 auto;
             display: flex;
             justify-content: space-around;
-            padding-top: ;
+            
         }
         .logo:nth-of-type(1){
-            background: url("../img/Singleton.png") no-repeat center center;
+            background: url("../img/Singleton.png") no-repeat center top;
         }
         .logo:nth-of-type(2){
-        background: url("../img/Hero.png") no-repeat center center;
+        background: url("../img/Hero.png") no-repeat center top;
         }
         .logo:nth-of-type(3){
-        background: url("../img/Portland.png") no-repeat center center;
+        background: url("../img/Portland.png") no-repeat center top;
         }
         .logo{
-            
+            padding-top: 70px;
         }
