--- a/Demo/basicDemo/HelloWorld/CSS/helloWorld.css
+++ b/Demo/basicDemo/HelloWorld/CSS/helloWorld.css
@@ -24,7 +24,6 @@ div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockqu
     /*helloWorld*/
     .helloWorld{
     	width: 100%;
-    	/*height: 100%;*/
     	color: white;
         padding: 210px 0;
     	text-align: center;
@@ -194,6 +193,7 @@ div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockqu
         .banner3{
             text-align: center;
             padding-top: 100px;
+            opacity: 1;
         }
         .banner3 h2{
             font-size: 42px;
@@ -204,8 +204,7 @@ div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockqu
             margin: 100px auto;
             display: flex;
             flex-flow: row wrap;
-            justify-content: space-around;
-            
+            justify-content: space-between;
         }
         .logo:nth-of-type(1){
             background: url("../img/Singleton.png") no-repeat center top;
@@ -224,4 +223,79 @@ div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockqu
             font-size: 16px;
             line-height: 26px;
         }
-        
+        .banner3 .p{
+            text-align: left;
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            margin: 50px 0;
+        }
+        .banner3 .pic{
+            margin: 50px 0;
+        }
+        .banner3 .p>h4{
+            display: inline-block;
+            width: 330px;
+            font-size: 20px;
+            line-height: 32px;
+            margin-bottom: 20px;
+        }
+        .banner3 .p>p {
+            display: inline-block;
+            width: 320px;
+            font-size: 16px;
+            line-height: 28px;
+        }
+        /*crew*/
+    .crew{
+        text-align: center;
+        padding: 50px 0;
+    }
+    .crew >h2{
+        font-size: 42px;
+        line-height: 52px;
+        margin: 20px 0;
+    }
+    .crew >p{
+        display: inline-block;
+        width: 820px;
+        margin-bottom: 60px;
+    }
+    .crew .wrapper{
+        width: 970px;
+        margin: 0 auto;
+    }
+    .userpic{
+        margin: 15px 0;
+        position: relative;
+    }
+    .link{
+        margin: 30px;
+    }
+    .cover:hover{
+        opacity: 1;
+    }
+    .link>img{
+        margin: 0 10px;
+    }
+    .cover{
+        text-align: center;
+        padding: 90px;
+        position: absolute;
+        width: 471px;
+        height: 340px;
+        top: 0;
+        left: 0;
+        background: rgba(101,101,101,0.6);
+        color: white;
+        opacity: 0;
+    }
+    .cover>h4{
+        font-size: 20px;
+        line-height: 32px;
+    }
+    .cover>p{
+        font-size: 12px;
+        letter-spacing: 2px;
+    }
+    
