--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -9,10 +9,13 @@ address,cite,code,em,th {font-weight:normal; font-style:normal;}
 html,body{
     width:100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 /*nav*/
 .container{
     display: flex;
+    width: 100%;
     height: 100%;
     font-family: "Raleway",sans-serif;
 }
@@ -40,16 +43,24 @@ html,body{
     background:#222c3c;
     color: #b7c0cd;
     font-size: 14px;
-
+    font-weight: 600;
 }
 .menu ul{
-    margin: 30px;
+    margin: 30px 0;
 }
 .menu li{
-    margin: 25px 0;
+    padding: 10px 30px;
+    position: relative;
+}
+.menu li>.highlight{
+    border: 1px solid #2399f1;
+    border-radius: 0 2px 2px 0;
+    position: absolute;
+    left: 0;
+    top: 50%;
 }
 .menu li:first-of-type{
     font-size: 12px;
     color: #5b6779;
-    font-weight: normal;
+    background: center right 30px url("./img/Settings.png") no-repeat;
 }
