--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -64,3 +64,44 @@ html,body{
     color: #5b6779;
     background: center right 30px url("./img/Settings.png") no-repeat;
 }
+.menu ul:nth-of-type(2)>li:nth-of-type(2){
+    padding-left: 55px;
+    background: url("./img/Video Camera.png") center left 30px no-repeat;
+}
+.menu ul:nth-of-type(2)>li:nth-of-type(3){
+    padding-left: 55px;
+    background: url("./img/Video Camera.png") center left 30px no-repeat;
+}
+.menu ul:nth-of-type(2)>li:nth-of-type(4){
+    padding-left: 55px;
+    background: url("./img/Video Camera.png") center left 30px no-repeat;
+}
+.menu ul:nth-of-type(2)>li:nth-of-type(5){
+    padding-left: 55px;
+    background: url("./img/Video Camera.png") center left 30px no-repeat;
+}
+.baseBlue{
+    width: 32px;
+    height: 24px;
+    position: absolute;
+    right: 30px;
+    top: 6px;
+    text-align: center;
+    line-height: 24px;
+    background: url("./img/baseBlue.png") center right no-repeat;
+}
+.baseRed{
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    right: 30px;
+    top: 6px;
+    text-align: center;
+    line-height: 24px;
+    background: url("./img/baseRed.png") center right no-repeat;
+}
+.menu span{
+    width: 250px;
+    height: 2px;
+    background: #5b6779;
+}
