--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -66,7 +66,7 @@ html,body{
 }
 .menu ul:nth-of-type(2)>li:nth-of-type(2){
     padding-left: 55px;
-    background: url("./img/Video Camera.png") center left 30px no-repeat;
+    background: url("./img/Book of Wisdom.png") center left 30px no-repeat;
 }
 .menu ul:nth-of-type(2)>li:nth-of-type(3){
     padding-left: 55px;
@@ -74,11 +74,11 @@ html,body{
 }
 .menu ul:nth-of-type(2)>li:nth-of-type(4){
     padding-left: 55px;
-    background: url("./img/Video Camera.png") center left 30px no-repeat;
+    background: url("./img/Painting.png") center left 30px no-repeat;
 }
 .menu ul:nth-of-type(2)>li:nth-of-type(5){
     padding-left: 55px;
-    background: url("./img/Video Camera.png") center left 30px no-repeat;
+    background: url("./img/Chart.png") center left 30px no-repeat;
 }
 .baseBlue{
     width: 32px;
