--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -17,7 +17,8 @@ html,body{
     display: flex;
     width: 100%;
     height: 100%;
-    font-family: "Raleway",sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: lighter;
 }
 .item{
     margin: 20px;
@@ -43,10 +44,11 @@ html,body{
     background:#222c3c;
     color: #b7c0cd;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
+    position: relative;
 }
 .menu ul{
-    margin: 30px 0;
+    margin: 20px 0;
 }
 .menu li{
     padding: 10px 30px;
@@ -106,4 +108,33 @@ html,body{
     background: #2a3547;
     display: block;
     margin: 0 auto;
+}
+.goals{
+    position: absolute;
+    bottom: 0;
+    padding: 20px 30px;
+    font-weight: normal;
+    color: white;
+}
+/*message*/
+.message{
+    flex: 1;
+}
+.headBar{
+    padding: 15px;
+    position: relative;
+}
+.userInfo{
+    width: 200px;
+    position: absolute;
+    right: 0;
+}
+.userInfo>img{
+    display: inline-block;
+}
+.userInfo>p:first-of-type{
+    display: inline-block;
+}
+.userInfo>p:last-of-type{
+    display: inline-block;
 }
