--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -44,6 +44,9 @@ html,body{
     font-weight: lighter;
     overflow: scroll;
 }
+.inner{
+    padding: 20px 30px;
+}
 /*nav*/
 .item{
     margin: 20px;
@@ -138,7 +141,6 @@ html,body{
 .goals{
     position: absolute;
     bottom: 0;
-    padding: 20px 30px;
     font-weight: normal;
     color: white;
     background: #222c3c;
@@ -210,7 +212,6 @@ html,body{
     border-right: 1px solid rgba(110,110,110,0.2);
 }
 .search{
-    padding: 20px 30px;
     border-bottom: 1px solid rgba(110,110,110,0.2);
     height: 70px;
 }
@@ -234,13 +235,12 @@ html,body{
     border-top: none;
 }
 .shortChat{
-    padding: 20px;
     border-bottom: 1px solid rgba(110,110,110,0.2);
     position: relative;
 }
-.shortChat>img{
+.bio{
     float: left;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 .shortChat>p:first-of-type{
     padding: 8px;
@@ -268,7 +268,7 @@ html,body{
 }
 .shortChat p:nth-of-type(2){
     display: inline-block;
-    width: 325px;
+    width: calc(100% - 25px);
     line-height: 19px;
 }
 .shortChat .baseBlue{
@@ -280,7 +280,6 @@ html,body{
 }
 .chatControl{
     width: 100%;
-    padding: 20px 30px;
     border-bottom: 1px solid rgba(110,110,110,0.2);
     height: 70px;
 }
@@ -322,10 +321,23 @@ html,body{
     border-radius: 4px;
     background: #1bb934;
 }
+.divider{
+    display: inline-block;
+    height: 32px;
+    width: 1px;
+    background: rgb(240,241,244);
+    margin-left: 30px;
+}
 .chatControl form>p{
     display: inline-block;
     height: 32px;
     line-height: 32px;
     font-weight: bold;
     color: #56688a;
+    margin: 0 20px;
+}
+.oneChat>span {
+    font-size: 16px;
+    font-weight: bold;
+    color: #585d68;
 }
