--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -336,8 +336,13 @@ html,body{
     color: #56688a;
     margin: 0 20px;
 }
-.oneChat>span {
+.oneChat>span:nth-of-type(1) {
     font-size: 16px;
     font-weight: bold;
     color: #585d68;
+}
+.oneChat>span:nth-of-type(2){
+    margin-left: 5px;
+    color: #7f8fa4;
+    font-weight: bold;
 }
