--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -391,3 +391,6 @@ html,body{
 .chat>div>.inner:last-of-type:after{visibility: hidden}
 .chat>div>.inner:last-of-type{
     border-bottom: none;}
+.pic{
+    
+}
