--- a/Demo/basicDemo/12_15/12_15.css
+++ b/Demo/basicDemo/12_15/12_15.css
@@ -345,6 +345,9 @@ html,body{
     color: #56688a;
     margin: 0 20px;
 }
+.oneChat{
+    display: inline-block;
+}
 .oneChat>span:nth-of-type(1) {
     font-size: 16px;
     font-weight: bold;
@@ -389,8 +392,26 @@ html,body{
     color: #2399f1;
 }
 .chat>div>.inner:last-of-type:after{visibility: hidden}
-.chat>div>.inner:last-of-type{
-    border-bottom: none;}
+.chat>div>.inner:last-of-type{border-bottom: none;}
 .pic{
+    padding: 20px 0 20px 70px;
+}
+.pic>div{
+    display: inline-block;
+    margin-right: 15px;
+    position: relative;
+}
+.cover{
+    width: 100%;
+    height: 100%;
+    background: rgba(110,110,110,0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.cover>img{
+    position: absolute;
+    left: 50%;
+    top: 50%;
     
 }
